# sqpt_demo_00016700

./: README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
