[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqpt_demo_00016700"
version = "0.1.0"
description = "Demo seminar Python package for CI pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Surname" }
]

[tool.setuptools]
packages = ["app"]
